<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>persistent-cache</artifactId>
        <groupId>com.alexrnv.benchmark</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>trip-generator</artifactId>

    <pluginRepositories>
        <pluginRepository>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
        </pluginRepository>
        <pluginRepository>
            <id>protoc-plugin</id>
            <url>https://dl.bintray.com/sergei-ivanov/maven/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.alexrnv.analytics.benchmarks.DBWorkFlowBenchmark</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <assembleDirectory>${project.build.directory}</assembleDirectory>
                    <configurationDirectory>.</configurationDirectory>
                    <repositoryLayout>flat</repositoryLayout>
                    <repositoryName>lib</repositoryName>
                    <useWildcardClassPath>true</useWildcardClassPath>
                    <binFileExtensions>
                        <unix>.sh</unix>
                    </binFileExtensions>
                    <programs>
                        <program>
                            <mainClass>com.alexrnv.tripgen.TripGenerator</mainClass>
                            <id>benchmark</id>
                            <jvmSettings>
                                <extraArguments>
                                    <extraArgument>-Djava.net.preferIPv4Stack=true</extraArgument>
                                    <extraArgument>-Dcom.sun.management.jmxremote.port=9999</extraArgument>
                                    <extraArgument>-Dcom.sun.management.jmxremote.rmi.port=9998</extraArgument>
                                    <extraArgument>-Dcom.sun.management.jmxremote.authenticate=false</extraArgument>
                                    <extraArgument>-Dcom.sun.management.jmxremote.ssl=false</extraArgument>
                                    <extraArgument>-Dcom.sun.management.jmxremote.local.only=false</extraArgument>
                                    <extraArgument>-Djava.rmi.server.hostname="ec2-54-191-106-27.us-west-2.compute.amazonaws.com"</extraArgument>
                                    <extraArgument>-Xms8G</extraArgument>
                                    <extraArgument>-Xmx8G</extraArgument>
                                    <extraArgument>-XX:+UseConcMarkSweepGC</extraArgument>
                                    <extraArgument>-XX:NewRatio=5</extraArgument>
                                    <extraArgument>-XX:+UseParNewGC</extraArgument>
                                    <extraArgument>-XX:CMSInitiatingOccupancyFraction=70</extraArgument>
                                    <extraArgument>-XX:+CMSConcurrentMTEnabled</extraArgument>
                                    <extraArgument>-verbose:gc</extraArgument>
                                    <extraArgument>-XX:+PrintGCDetails</extraArgument>
                                    <extraArgument>-XX:+PrintGCTimeStamps</extraArgument>
                                    <extraArgument>-Xloggc:./gc.log</extraArgument>
                                </extraArguments>
                            </jvmSettings>
                        </program>
                    </programs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.rocksdb</groupId>
            <artifactId>rocksdbjni</artifactId>
            <version>4.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>2.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6</version>
        </dependency>
        <dependency>
            <groupId>com.aerospike</groupId>
            <artifactId>aerospike-client</artifactId>
            <version>3.1.9</version>
        </dependency>
    </dependencies>


</project>